fix: change gaps

--- a/rslang/src/components/AudioCallGame/scss/base/_base.scss
+++ b/rslang/src/components/AudioCallGame/scss/base/_base.scss
@@ -1,10 +1,14 @@
+@import './src/scss/abstracts/mixins';
+@import './src/scss/abstracts/placeholders';
+
 .audiocall-container {
   min-height: 100vh;
-  padding: 40px;
   background: $color-audiocall-primary;
   background: linear-gradient(
     to bottom,
     $color-audiocall-primary 0%,
     $color-audiocall-secondary 100%
   );
+
+  @extend %padding;
 }
