--- a/rslang/src/components/AudioCallGame/scss/components/_levels-stepper.scss
+++ b/rslang/src/components/AudioCallGame/scss/components/_levels-stepper.scss
@@ -2,8 +2,6 @@
 .audioCall-pages-stepper {
   &.sticky-label .MuiSlider-thumb:before {
     position: absolute;
-    top: 100%;
-    left: 50%;
     display: block;
     color: $color-light;
     font-size: 1.5rem;
@@ -59,4 +57,8 @@
 
 .audioCall-steppers-container {
   @include flex(column, center, center);
+}
+
+.audioCall-levels-stepper {
+  margin-bottom: 20px;
 }
