--- a/rslang/src/components/AudioCallGame/scss/layouts/_start-page.scss
+++ b/rslang/src/components/AudioCallGame/scss/layouts/_start-page.scss
@@ -2,12 +2,11 @@
   .start-page {
     width: 100%;
     margin: 0 auto;
-    padding: 40px 0 0;
     @include flex(column, center, center);
   }
 
   .start-page__title {
-    margin: 20px 0 10px;
+    margin-bottom: 10px;
     color: $color-light;
     font-weight: normal;
     font-size: 8rem;
